--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <p class="msg"> 올해는 꼭 이루자 !!! </p>
     <div class="row flex-row wrap">
         <div class="bucket img1-t2 center ">부서 이동 </div>
-        <div class="bucket img2-t3 center">코드잼 통과 </div>
+        <div class="bucket img2-t3 center">코드잼 예선 통과 </div>
         <div class="bucket img2-t4 center">영어 7등급 </div>
-        <div class="bucket img1-t5 center">해킹대회 본선2등 </div>
+        <div class="bucket img1-t5 center">해킹대회 본선3등 </div>
         <div class="bucket img1-t6 center">새차 뽑기 </div>
         <div class="bucket img2 center">LDL 수치 130 </div>
     </div>
